limpieza, se imprime el mapa

--- a/proyecto/code/bfs/bfs_pth2/Makefile
+++ b/proyecto/code/bfs/bfs_pth2/Makefile
@@ -3,7 +3,7 @@ TARGETS = bfs_pth2
 CROSS_TOOL =
 CC_CPP = $(CROSS_TOOL)g++
 
-CFLAGS = -std=c++11 -pthreads
+CFLAGS = -std=c++11 -pthread
 
 all: clean $(TARGETS)
 
