--- a/proyecto/code/bfs/_another_bfs_/Makefile
+++ b/proyecto/code/bfs/_another_bfs_/Makefile
@@ -3,7 +3,7 @@ TARGETS = another_bfs
 CROSS_TOOL =
 CC_CPP = $(CROSS_TOOL)g++
 
-CFLAGS = -std=c++11 -pthreads
+CFLAGS = -std=c++11 -pthread
 
 all: clean $(TARGETS)
 
